--- a/PodcastsApp/Modules/Podcast/Podcast.storyboard
+++ b/PodcastsApp/Modules/Podcast/Podcast.storyboard
@@ -28,7 +28,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="photo" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="VSY-Ls-Vtd">
-                                                    <rect key="frame" x="20" y="13.666666666666664" width="100" height="97"/>
+                                                    <rect key="frame" x="20" y="11.666666666666668" width="100" height="99.666666666666671"/>
                                                     <color key="backgroundColor" systemColor="systemFillColor"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="100" id="XnO-Xc-JR8"/>
