--- a/PodcastsApp/Modules/Main/Main.storyboard
+++ b/PodcastsApp/Modules/Main/Main.storyboard
@@ -6,10 +6,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Tab Bar Controller-->
+        <!--Main View Controller-->
         <scene sceneID="03o-Az-9cF">
             <objects>
-                <tabBarController id="VK5-ty-PSJ" sceneMemberID="viewController">
+                <tabBarController id="VK5-ty-PSJ" customClass="MainViewController" customModule="PodcastsApp" customModuleProvider="target" sceneMemberID="viewController">
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="q0t-KH-jgg">
                         <rect key="frame" x="0.0" y="0.0" width="390" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
