--- a/PodcastsApp/Modules/Player/PlayerView.xib
+++ b/PodcastsApp/Modules/Player/PlayerView.xib
@@ -93,7 +93,7 @@
             <connections>
                 <outletCollection property="gestureRecognizers" destination="oCY-r5-ISM" appends="YES" id="sFu-G0-agr"/>
             </connections>
-            <point key="canvasLocation" x="110.76923076923076" y="-636.96682464454977"/>
+            <point key="canvasLocation" x="77" y="-672"/>
         </view>
         <tapGestureRecognizer id="oCY-r5-ISM">
             <connections>
