--- a/PodcastsApp/Modules/Main/Main.storyboard
+++ b/PodcastsApp/Modules/Main/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="VK5-ty-PSJ">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="VK5-ty-PSJ">
     <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -18,6 +18,7 @@
                     <connections>
                         <segue destination="MRd-Nv-nbC" kind="relationship" relationship="viewControllers" id="FGt-XL-vj1"/>
                         <segue destination="WYt-m2-uG3" kind="relationship" relationship="viewControllers" id="pna-iW-Chf"/>
+                        <segue destination="mkK-IZ-Diu" kind="relationship" relationship="viewControllers" id="KZ5-aw-Tlu"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3mR-fr-iAV" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -43,6 +44,16 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7MS-hZ-wcC" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-420" y="3"/>
+        </scene>
+        <!--Root Download-->
+        <scene sceneID="Hf5-C0-ZXW">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Download" referencedIdentifier="Root Download" id="mkK-IZ-Diu" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="soD-X6-R5s"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="GJC-Go-qS9" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-407" y="127"/>
         </scene>
     </scenes>
 </document>
